[package]
name = "rust-node-exporter"
version = "0.2.4"
authors = ["Darkhan Kubigenov <darkhanu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
hidapi = "2.6.3"
lazy_static = "1.5.0"
quick-xml = { version = "0.37.0", features = ["serialize"] }
regex = "1"
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0.132"

[build-dependencies]
bindgen = "0.70.1"

[profile.release]
lto = true
