[package]
name = "rust-node-exporter"
version = "0.2.5"
authors = ["Darkhan Kubigenov <darkhanu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5.39", features = ["derive"] }
ctrlc = "3.4.7"
hidapi = "2.6.3"
quick-xml = { version = "0.37.5", features = ["serialize"] }
regex = "1"
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0.140"

[build-dependencies]
bindgen = "0.72.0"

[profile.release]
lto = true
